# emotional

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  cz_emotional.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
cz_emotional/: __init__.py
cz_shiny/: __init__.py  changelog.py  config.py  cz.py  github.py  gitlab.py  jira.py  utils.py
emotional/: __init__.py  changelog.md.jinja  config.py  cz.py  defaults.py  github.py  gitlab.py  jira.py  plugin.py
tests/: conftest.py  test_changelog.py  test_commit.py  test_cz.py  test_github.py  test_gitlab.py  test_jira.py
tests/__snapshots__/test_changelog/: test_render_changelog_group_by_scope.md  test_render_changelog_order_by_scope.md  test_render_changelog_release_emoji.md  test_render_changelog_with_default_settings.md
tests/fixtures/changelogs/: default.md  group-by-scope.md
